--- a/collated/main/A0141077L.md
+++ b/collated/main/A0141077L.md
@@ -32,10 +32,11 @@ public class MarkCommand extends Command {
             + "Parameters: INDEX (must be a positive integer) [MORE_INDICES]...\n"
             + "Example: " + COMMAND_WORD + " 1 2";
 
-    private static final String MESSAGE_INCOMPLETE_EXECUTION = "Not all tasks sucessfully marked.";
+    public static final String MESSAGE_DUPLICATE_INDICES = "Duplicate indices are not allowed.";
+    public static final String MESSAGE_INCOMPLETE_EXECUTION = "Not all tasks successfully marked.";
     public static final String MESSAGE_INDEX_OUT_OF_BOUNDS = "The task index provided is out of bounds.";
     public static final String MESSAGE_MARK_TASK_SUCCESSFUL = "Task #%1$d completed: %2$s";
-    private static final String MESSAGE_MARK_TASK_UNSUCCESSFUL = "Task #%1$d unsuccessfully marked as complete.";
+    public static final String MESSAGE_MARK_TASK_UNSUCCESSFUL = "Task #%1$d unsuccessfully marked as complete.";
     public static final String MESSAGE_STATUS_ALREADY_DONE = "The task status is already set to Done.";
 
     private int[] filteredTaskListIndices;
@@ -84,7 +85,7 @@ public class MarkCommand extends Command {
         }
 
         if (executionIncomplete) {
-            if (multipleExectutions(filteredTaskListIndices)) {
+            if (multipleExecutions(filteredTaskListIndices)) {
                 compiledExecutionMessage.insert(0, MESSAGE_INCOMPLETE_EXECUTION + '\n');
             }
             throw new CommandException(compiledExecutionMessage.toString());
@@ -98,7 +99,7 @@ public class MarkCommand extends Command {
         this.markedTask = null;
     }
 
-    private boolean multipleExectutions(int[] filteredTaskListIndices) {
+    private boolean multipleExecutions(int[] filteredTaskListIndices) {
         return (filteredTaskListIndices.length > 1) ? true : false;
     }
 
@@ -113,8 +114,8 @@ public class MarkCommand extends Command {
             throws CommandException, UniqueTaskList.DuplicateTaskException {
         this.taskToMark = getTaskToMark(currIndex, lastShownList);
         this.markedTask = createMarkedCopyOfTask(this.taskToMark);
-        updateTaskListAtIndex(currIndex, markedTask);
-        storeTasksForUndo(taskToMark, markedTask);
+        updateTaskListAtIndex(currIndex, this.markedTask);
+        storeTasksForUndo(this.taskToMark, this.markedTask);
     }
 
     private ReadOnlyTask getTaskToMark(int currIndex, UnmodifiableObservableList<ReadOnlyTask> lastShownList) {
@@ -167,7 +168,7 @@ public class SaveAsCommand extends Command {
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Creates a copy of the current task list "
             + "to the new specified file path and uses that file path.\n"
             + "File path must end with .xml\n"
-            + "Parameters: FILE_PATH.xml\n"
+            + "Parameters: FILE_PATH\n"
             + "Example: " + COMMAND_WORD + " data/watodo2.xml";
 
     public static final String MESSAGE_DUPLICATE_FILE_PATH = "New storage file location must be "
@@ -199,7 +200,7 @@ public class SaveAsCommand extends Command {
     }
 
     @Override
-    public CommandResult execute() {
+    public CommandResult execute() throws CommandException {
         try {
             checkFilePaths();
             copyFileData();
@@ -207,7 +208,7 @@ public class SaveAsCommand extends Command {
             logSuccess();
         } catch (IllegalValueException | IOException e) {
             e.printStackTrace();
-            return new CommandResult (e.getMessage());
+            throw new CommandException (e.getMessage());
         }
         return new CommandResult(String.format(MESSAGE_SUCCESS, this.newFilePath));
     }
@@ -259,7 +260,7 @@ public class SaveAsCommand extends Command {
  * Parses input arguments and creates a new MarkCommand object
  */
 public class MarkCommandParser {
-    private static final Integer NEGATIVE_NUMBER = -1;
+    private static final Integer INVALID_NUMBER = -1;
     int[] filteredTaskListIndices;
 
     /**
@@ -268,8 +269,10 @@ public class MarkCommandParser {
      */
     public Command parse(String args) {
         try {
+            checkIndexFound(args);
             getOptionalIntArrayFromString(args);
             checkValidIndices();
+            checkForDuplicateIndices();
             sortIntArray();
         } catch (IllegalValueException ive) {
             return new IncorrectCommand(ive.getMessage());
@@ -277,22 +280,39 @@ public class MarkCommandParser {
         return new MarkCommand(filteredTaskListIndices);
     }
 
+    private void checkIndexFound(String args) throws IllegalValueException {
+        if (args.isEmpty()) {
+            throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
+        }
+    }
+
     private void getOptionalIntArrayFromString(String args) {
         String[] indicesInStringArray = args.split("\\s+");
         this.filteredTaskListIndices = new int[indicesInStringArray.length];
 
-        //Sets index as NEGATIVE_NUMBER if it is not a positive unsigned integer
+        //Sets index as INVALID_NUMBER if it is not a positive unsigned integer
         for (int i = 0; i < filteredTaskListIndices.length; i++) {
             Optional<Integer> optionalIndex = ParserUtil.parseIndex(indicesInStringArray[i]);
-            filteredTaskListIndices[i] = optionalIndex.orElse(NEGATIVE_NUMBER);
+            filteredTaskListIndices[i] = optionalIndex.orElse(INVALID_NUMBER);
         }
     }
 
     private void checkValidIndices() throws IllegalValueException {
         for (int i = 0; i < filteredTaskListIndices.length; i++) {
-            if (filteredTaskListIndices[i] == NEGATIVE_NUMBER) {
+            if (filteredTaskListIndices[i] == INVALID_NUMBER) {
                 throw new IllegalValueException(MESSAGE_INVALID_TASK_DISPLAYED_INDEX + '\n' +
                         MarkCommand.MESSAGE_USAGE);
+            }
+        }
+    }
+
+    /** Ensures that there are no duplicate indices parsed */
+    private void checkForDuplicateIndices() throws IllegalValueException {
+        List<Integer> indicesAsInteger = Ints.asList(filteredTaskListIndices);
+        Set<Integer> indicesHashSet = new HashSet<Integer>();
+        for (Integer index : indicesAsInteger) {
+            if (!indicesHashSet.add(index)) {
+                throw new IllegalValueException(MarkCommand.MESSAGE_DUPLICATE_INDICES);
             }
         }
     }
@@ -313,104 +333,6 @@ public class MarkCommandParser {
 
 }
 ```
-###### \java\seedu\watodo\logic\parser\SaveAsCommand.java
-``` java
-/**
- * Changes the save location of the Task List data.
- */
-public class SaveAsCommand extends Command {
-
-    public static final String COMMAND_WORD = "saveas";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Creates a copy of the current task list "
-            + "to the new specified file path and uses that file path.\n"
-            + "File path must end with .xml\n"
-            + "Parameters: FILE_PATH.xml\n"
-            + "Example: " + COMMAND_WORD + " data/watodo2.xml";
-
-    public static final String MESSAGE_DUPLICATE_FILE_PATH = "New storage file location must be "
-            + "different from the current one";
-    public static final String MESSAGE_INVALID_FILE_PATH_EXTENSION = "File name must end with .xml";
-    public static final String MESSAGE_SUCCESS = "Storage file location moved to %1$s";
-
-    private String oldFilePath;
-    private String newFilePath;
-    private Config currConfig;
-    private static final Logger logger = LogsCenter.getLogger(SaveAsCommand.class);
-
-    public SaveAsCommand(String newFilePath) {
-        assert newFilePath != null;
-        this.currConfig = getConfig();
-        this.oldFilePath = currConfig.getWatodoFilePath();
-        this.newFilePath = newFilePath;
-    }
-
-    private Config getConfig() {
-        Config initialisedConfig;
-        try {
-            Optional<Config> optionalConfig = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE);
-            initialisedConfig = optionalConfig.orElse(new Config());
-        } catch (DataConversionException dce) {
-            initialisedConfig = new Config();
-        }
-        return initialisedConfig;
-    }
-
-    @Override
-    public CommandResult execute() {
-        try {
-            checkFilePaths();
-            copyFileData();
-            updateFilePath();
-            logSuccess();
-        } catch (IllegalValueException | IOException e) {
-            e.printStackTrace();
-            return new CommandResult (e.getMessage());
-        }
-        return new CommandResult(String.format(MESSAGE_SUCCESS, this.newFilePath));
-    }
-
-    private void checkFilePaths() throws IllegalValueException {
-        if (this.oldFilePath.equals(this.newFilePath)) {
-            throw new IllegalValueException(MESSAGE_DUPLICATE_FILE_PATH);
-        }
-    }
-
-    private void copyFileData() throws IOException {
-        XmlTaskListStorage xmlTaskListStorage = new XmlTaskListStorage(oldFilePath);
-        xmlTaskListStorage.saveTaskList(model.getTaskManager(), newFilePath);
-    }
-
-    private void updateFilePath() {
-        try {
-            updateConfig();
-        } catch (IOException ioe) {
-            logger.warning("Failed to save config file: ");
-            ioe.printStackTrace();
-        }
-        postEvent();
-    }
-
-    private void updateConfig() throws IOException {
-        currConfig.setWatodoFilePath(newFilePath);
-        ConfigUtil.saveConfig(currConfig, Config.DEFAULT_CONFIG_FILE);
-    }
-
-    private void postEvent() {
-        EventsCenter.getInstance().post(new StorageFilePathChangedEvent(this.newFilePath));
-    }
-
-    private void logSuccess() {
-        logger.log(Level.INFO, String.format(MESSAGE_SUCCESS, this.newFilePath));
-    }
-
-    @Override
-    public String toString() {
-        return COMMAND_WORD;
-    }
-
-}
-```
 ###### \java\seedu\watodo\logic\parser\SaveAsCommandParser.java
 ``` java
 /**
@@ -424,14 +346,27 @@ public class SaveAsCommandParser {
      */
     public Command parse(String newFilePath) {
         newFilePath.trim();
-        if (!checkCorrectFileExtension(newFilePath)) {
-            return new IncorrectCommand(SaveAsCommand.MESSAGE_INVALID_FILE_PATH_EXTENSION);
+
+        try {
+            checkFilePathExists(newFilePath);
+            checkCorrectFileFormat(newFilePath);
+        } catch (IllegalValueException ive) {
+            return new IncorrectCommand(ive.getMessage());
         }
+
         return new SaveAsCommand(newFilePath);
     }
 
-    private boolean checkCorrectFileExtension(String newFilePath) {
-        return (newFilePath.endsWith(".xml")) ? true : false;
+    private void checkFilePathExists(String newFilePath) throws IllegalValueException {
+        if (newFilePath.isEmpty()) {
+            throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SaveAsCommand.MESSAGE_USAGE));
+        }
+    }
+
+    private void checkCorrectFileFormat(String newFilePath) throws IllegalValueException {
+        if (!newFilePath.endsWith(".xml")) {
+            throw new IllegalValueException(SaveAsCommand.MESSAGE_INVALID_FILE_PATH_EXTENSION);
+        }
     }
 
 }
@@ -469,6 +404,7 @@ public enum TaskStatus {
     @Override
     @Subscribe
     public void handleStorageFilePathChangedEvent(StorageFilePathChangedEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event, "Storage File Path changed, saving to file"));
         taskListStorage = new XmlTaskListStorage(event.newFilePath);
     }
 ```
