--- a/collated/main/A0143076J.md
+++ b/collated/main/A0143076J.md
@@ -38,6 +38,7 @@
         try {
             this.undoAdd = new Task(toAdd);
             model.addTask(toAdd);
+            selectLastTask();
             return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd));
         } catch (UniqueTaskList.DuplicateTaskException e) {
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
@@ -45,35 +46,42 @@
     }
 
 ```
-###### \java\seedu\watodo\logic\commands\AlternativeCommand.java
+###### \java\seedu\watodo\logic\commands\AlternativeCommandsLibrary.java
 ``` java
 /**
  * Stores a map of alternatives command words, and their corresponding default
  * command word. Also stores a list of all the default command words of Watodo.
  */
-public class AlternativeCommand {
+public class AlternativeCommandsLibrary {
 
-    public static final Set<String> COMMANDS_WORDS = new HashSet<String>() {
+    public static final List<String> COMMANDS_WORDS = new ArrayList<String>() {
         {
             add(AddCommand.COMMAND_WORD);
-            add(ClearCommand.COMMAND_WORD);
-            add(DeleteCommand.COMMAND_WORD);
             add(EditCommand.COMMAND_WORD);
-            add(ExitCommand.COMMAND_WORD);
-            add(FindCommand.COMMAND_WORD);
-            add(HelpCommand.COMMAND_WORD);
-            add(ListAllCommand.ARGUMENT);
-            add(ListCommand.COMMAND_WORD);
-            add(ListDateCommand.ARGUMENT);
-            add(ListDeadlineCommand.ARGUMENT);
-            add(ListDoneCommand.ARGUMENT);
-            add(ListEventCommand.ARGUMENT);
-            add(ListFloatCommand.ARGUMENT);
+            add(DeleteCommand.COMMAND_WORD);
             add(MarkCommand.COMMAND_WORD);
             add(UnmarkCommand.COMMAND_WORD);
+            add(ListCommand.COMMAND_WORD);
+            add(ListCommand.COMMAND_WORD + " " + ListAllCommand.ARGUMENT);
+            add(ListCommand.COMMAND_WORD + " " + ListDeadlineCommand.ARGUMENT);
+            add(ListCommand.COMMAND_WORD + " " + ListEventCommand.ARGUMENT);
+            add(ListCommand.COMMAND_WORD + " " + ListFloatCommand.ARGUMENT);
+            add(ListCommand.COMMAND_WORD + " " + ListDoneCommand.ARGUMENT);
+            add(ListCommand.COMMAND_WORD + " " + ListUndoneCommand.ARGUMENT);
+            add(FindCommand.COMMAND_WORD);
+            add(UndoCommand.COMMAND_WORD);
+            add(RedoCommand.COMMAND_WORD);
+            add(SelectCommand.COMMAND_WORD);
             add(ShortcutCommand.COMMAND_WORD);
+            add(SaveAsCommand.COMMAND_WORD);
+            add(ViewFileCommand.COMMAND_WORD);
+            add(ViewShortcutsCommand.COMMAND_WORD);
+            add(ClearCommand.COMMAND_WORD);
+            add(HelpCommand.COMMAND_WORD);
+            add(ExitCommand.COMMAND_WORD);
         }
     };
+
     public static HashMap<String, String> altCommands = new HashMap<String, String>() {
         {
             put("a", AddCommand.COMMAND_WORD);
@@ -84,32 +92,44 @@ public class AlternativeCommand {
             put("m", MarkCommand.COMMAND_WORD);
             put("check", MarkCommand.COMMAND_WORD);
             put("um", UnmarkCommand.COMMAND_WORD);
-            put("uncheck", MarkCommand.COMMAND_WORD);
+            put("uncheck", UnmarkCommand.COMMAND_WORD);
             put("f", FindCommand.COMMAND_WORD);
             put("search", FindCommand.COMMAND_WORD);
             put("r", RedoCommand.COMMAND_WORD);
             put("u", UndoCommand.COMMAND_WORD);
+            put("s", SelectCommand.COMMAND_WORD);
+
+            for (String commandWord : AlternativeCommandsLibrary.COMMANDS_WORDS) {
+                put(commandWord, commandWord);
+            }
         }
     };
 
-    /** Returns true if the given commandWord is an alternative command word. */
-    public static boolean containsAlternative(String commandWord) {
-        return altCommands.containsKey(commandWord);
+    /** Returns true if the given shortcutKey is an alternative command word. */
+    public static boolean isAlternative(String shortcutKey) {
+        assert shortcutKey != null;
+        return altCommands.containsKey(shortcutKey) && altCommands.get(shortcutKey) != null;
     }
 
-    /** Returns the standard CommandWord for the given alternative word. */
-    public static String getStandardCommandWord(String commandWord) {
-        return altCommands.get(commandWord);
+    /** Returns the standard CommandWord for the given shortcutKey. */
+    public static String getStandardCommandWord(String shortcutKey) {
+        assert shortcutKey != null && isAlternative(shortcutKey);
+        return altCommands.get(shortcutKey);
     }
 
     /** Adds a new alternativeCommand format to the hashMap */
     public static void addAlternative(String shortcutKey, String commandWord) {
+        assert shortcutKey != null && !isAlternative(shortcutKey);
         altCommands.put(shortcutKey, commandWord);
     }
 
-    /** Deletes the given shortcut key only if its corresponding standard commandWord matches what is given */
-    public static boolean deleteAlternative(String shortcutKey, String commandWord) {
-        return altCommands.remove(shortcutKey, commandWord);
+    /** Deletes the given shortcut key only if its corresponding standard commandWord matches what is given  */
+    public static void deleteAlternative(String shortcutKey, String commandWord) throws IllegalValueException {
+        assert shortcutKey != null && isAlternative(shortcutKey);
+        boolean isDelSuccess = altCommands.remove(shortcutKey, commandWord);
+        if (!isDelSuccess) {
+            throw new IllegalValueException(ShortcutCommand.MESSAGE_DELETE_INVALID_SHORTCUT_KEY);
+        }
     }
 }
 ```
@@ -131,20 +151,22 @@ public class ShortcutCommand extends Command {
     public static final String COMMAND_WORD = "shortcut";
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds or removes a shortcut key to one of the "
             + "standard functionalities of the task manager. "
-            + "Parameters: <+><-> COMMAND_WORD SHORTCUT_KEY" + "Example: "
-            + COMMAND_WORD + " + add a/";
+            + "Parameters: OPERATION COMMAND_WORD SHORTCUT_KEY\n" + "Example: "
+            + COMMAND_WORD + " + add a/\n"
+            + "adds the shortcut key 'a/' for the 'add' command.";
 
     public static final String MESSAGE_SUCCESS_ADDED = "New shortcut key added: %1$s";
     public static final String MESSAGE_SUCCESSS_DELETED = "Existing shortcut key deleted: %1$s";
     public static final String MESSAGE_DUPLICATE_SHORTCUT_KEY = "This shortcut key already exists!";
-    public static final String MESSAGE_DELETE_INVALID_SHORTCUT_KEY = "This shortcut key does not exists!";
+    public static final String MESSAGE_DELETE_INVALID_SHORTCUT_KEY = "This shortcut-command pair does not exist!";
+    public static final String MESSAGE_DELETE_NOT_ALLOWED = "Standard command words cannot be deleted!";
 
     /**
      * Constructs a Shortcut command object from the given args. Checks that the args are valid.
      */
     public ShortcutCommand(String operation, String commandWord, String shortcutKey) throws IllegalValueException {
         if  (!isArgsValid(operation, commandWord)) {
-            throw new IllegalValueException(MESSAGE_USAGE);
+            throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
         }
         this.operation = operation;
         this.commandWord = commandWord;
@@ -157,35 +179,49 @@ public class ShortcutCommand extends Command {
      */
     private boolean isArgsValid(String operation, String commandWord) {
         return (operation.equals(SHORTCUT_ADD_OPERATION) || operation.equals(SHORTCUT_DEL_OPERATION)) &&
-               AlternativeCommand.COMMANDS_WORDS.contains(commandWord);
+               AlternativeCommandsLibrary.COMMANDS_WORDS.contains(commandWord);
     }
 
     @Override
     public CommandResult execute() throws CommandException {
         if (operation.equals(SHORTCUT_ADD_OPERATION)) {
-            return executeAdd();
+            return executeAddShortcut();
         } else {
-            return executeDel();
+            return executeDelShortcut();
         }
     }
 
-    private CommandResult executeAdd() throws CommandException {
-        if (AlternativeCommand.containsAlternative(shortcutKey)) {
+    /**
+     * Adds the shortcutKey to the given commandWord.
+     *
+     * @throws CommandException if the shortcutKey already exists in the task manager
+     */
+    private CommandResult executeAddShortcut() throws CommandException {
+        if (AlternativeCommandsLibrary.isAlternative(shortcutKey)) {
             throw new CommandException(MESSAGE_DUPLICATE_SHORTCUT_KEY);
         }
-        AlternativeCommand.addAlternative(shortcutKey, commandWord);
+        AlternativeCommandsLibrary.addAlternative(shortcutKey, commandWord);
         return new CommandResult(String.format(MESSAGE_SUCCESS_ADDED, shortcutKey + "->" + commandWord));
     }
 
-    private CommandResult executeDel() throws CommandException {
-        if (!AlternativeCommand.containsAlternative(shortcutKey)) {
+    /**
+     * Deletes the shortcutKey from the given commandWord.
+     *
+     * @throws CommandException if the shortcutKey, commandWord pair does not exist in the task manager
+     */
+    private CommandResult executeDelShortcut() throws CommandException {
+        if (!AlternativeCommandsLibrary.isAlternative(shortcutKey)) {
             throw new CommandException(MESSAGE_DELETE_INVALID_SHORTCUT_KEY);
         }
-        if (!AlternativeCommand.deleteAlternative(shortcutKey, commandWord)) { //shortcut key exists but is mapped to
-                                                                     //a comandWord different from that given by user
-            throw new CommandException(MESSAGE_DELETE_INVALID_SHORTCUT_KEY);
+        if (shortcutKey.equals(commandWord)) {
+            throw new CommandException(MESSAGE_DELETE_NOT_ALLOWED);
         }
-        return new CommandResult(String.format(MESSAGE_SUCCESSS_DELETED, shortcutKey + "->" + commandWord));
+        try {
+            AlternativeCommandsLibrary.deleteAlternative(shortcutKey, commandWord);
+            return new CommandResult(String.format(MESSAGE_SUCCESSS_DELETED, shortcutKey + "->" + commandWord));
+        } catch (IllegalValueException e) {
+            throw new CommandException(e.getMessage());
+        }
     }
 
     @Override
@@ -548,7 +584,7 @@ public class DateTimeParser {
 public class ShortcutCommandParser {
 
     private final Pattern SHORTCUT_ARGS_REGEX =
-            Pattern.compile("(?<Operation>\\S)(\\s+)(?<CommandWord>\\S+)(\\s+)(?<ShortcutKey>\\S+)");
+            Pattern.compile("(?<Operation>^\\p{Punct})(\\s+)(?<CommandWord>.*)(\\s+)(?<ShortcutKey>\\S+$)");
 
     /**
      * Parses the given {@code String} of arguments in the context of the ShortcutCommand
@@ -564,8 +600,7 @@ public class ShortcutCommandParser {
             return new ShortcutCommand(matcher.group("Operation"), matcher.group("CommandWord"),
                     matcher.group("ShortcutKey"));
         } catch (IllegalValueException e) {
-            return new IncorrectCommand(
-                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, e.getMessage()));
+            return new IncorrectCommand(e.getMessage());
         }
     }
 
@@ -613,7 +648,12 @@ public class TagsParser {
     private void extractUnparsedArgs(String args) {
         //tag name is only until the first whitespace
         String tagArgs = String.format(EXTRACT_ARGS_REGEX, PREFIX_TAG.getPrefix() + "(\\S+)", "");
-        this.unparsedArgs = args.replaceAll(tagArgs, WHITESPACE).trim();  //to remove excess whitespace
+        String trimmedArgs = args.replaceFirst(tagArgs, WHITESPACE).trim(); //to remove excess whitespace
+        while (!trimmedArgs.equals(args)) {
+            args = trimmedArgs;
+            trimmedArgs = args.replaceFirst(tagArgs, WHITESPACE).trim();  //to prevent consecutive whitespaces
+        }
+        this.unparsedArgs = args;
     }
 
 
@@ -626,6 +666,13 @@ public class TagsParser {
     }
 
 }
+```
+###### \java\seedu\watodo\model\ModelManager.java
+``` java
+    private void loadAlternativeComamnds(HashMap<String, String> alternativeCommands) {
+        AlternativeCommandsLibrary.altCommands = alternativeCommands;
+    }
+
 ```
 ###### \java\seedu\watodo\model\task\DateTime.java
 ``` java
@@ -667,7 +714,8 @@ public class DateTime {
 
     /**
      * Converts the given string into a standard Date format of year, month, date, hour, minutes and seconds.
-     * Precondition: the String dateTime has already been checked to be valid
+     * Precondition: the String dat
+     * eTime has already been checked to be valid
      */
     private Calendar convertToCalendarFormat(String dateString) {
         List<DateGroup> parsedDateGroups = DATE_TIME_PARSER.parse(dateString);
@@ -722,4 +770,88 @@ public class DateTime {
     }
 
 }
+```
+###### \java\seedu\watodo\model\task\ReadOnlyTask.java
+``` java
+    /**
+     * Returns true if both have the same state. (interfaces cannot override .equals)
+     */
+    default boolean isSameStateAs(ReadOnlyTask other) {
+        return other == this // short circuit if same object
+                || (other != null // this is first to avoid NPE below
+                && other.getDescription().equals(this.getDescription())// state checks here onwards
+                && other.getStatus().equals(this.getStatus())
+                && other.getTags().equals(this.getTags()))
+                && datesAreSame(other);
+    }
+
+    /**
+     * Returns true if both have the same number of dates and the dates are equal.
+     */
+    default boolean datesAreSame (ReadOnlyTask other) {
+        if (this.getEndDate() != null) {
+            if (this.getStartDate() != null) {
+                return this.getStartDate().equals(other.getStartDate())
+                    && this.getEndDate().equals(other.getEndDate());
+            }
+            return this.getEndDate().equals(other.getEndDate())
+                && this.getStartDate() == other.getStartDate();
+        }
+        return this.getStartDate() == other.getStartDate()
+            && this.getEndDate() == other.getEndDate();
+    }
+
+    /**
+     * Formats the task as text, showing all internal details.
+     */
+    default String getAsText() {
+        final StringBuilder builder = new StringBuilder();
+        builder.append(getDescription())
+               .append("\nTags: ");
+        getTags().forEach(builder::append);
+        if (this.getStartDate() != null) {
+            builder.append("\nStart: ").append(this.getStartDate());
+        }
+        if (this.getEndDate() != null) {
+            builder.append("\nBy: ").append(this.getEndDate());
+        }
+        return builder.toString();
+    }
+}
+```
+###### \java\seedu\watodo\model\task\Task.java
+``` java
+    /* Constructs a Floating Task object from a given description. */
+    public Task(Description description, UniqueTagList tags) {
+        this(description, null, null, tags);
+        this.taskType = TaskType.FLOAT;
+    }
+
+    /* Constructs a Deadline Task object from a given description. */
+    public Task(Description description, DateTime deadline, UniqueTagList tags) {
+        this(description, null, deadline, tags);
+        this.taskType = TaskType.DEADLINE;
+    }
+
+    /* Constructs an Event Task object from a given description. */
+    public Task(Description description, DateTime startDate, DateTime endDate, UniqueTagList tags) {
+        assert !CollectionUtil.isAnyNull(description, tags);
+        this.description = description;
+        this.startDate = startDate;
+        this.endDate = endDate;
+        this.tags = new UniqueTagList(tags); // protect internal tags from changes in the arg list
+        this.taskType = TaskType.EVENT;
+    }
+
+```
+###### \java\seedu\watodo\model\UserPrefs.java
+``` java
+    public HashMap<String, String> getAlternativeCommands() {
+        return alternativeCommands == null ? AlternativeCommandsLibrary.altCommands : alternativeCommands;
+    }
+
+    public void updateLastestAlternativeCommandsLib(HashMap<String, String> alternativeCommands) {
+        this.alternativeCommands = alternativeCommands;
+    }
+
 ```
